force-app/main/default/objects/Timesheet_Entry__c/Timesheet_Entry__c.object-meta.xml
<CustomObject>
    <label>Timesheet Entry</label>
    <nameField>
        <label>Timesheet Entry</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Timesheet Entries</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>