force-app/main/default/objects/Timesheet_Entry__c/fields/Break_Time__c.field-meta.xml
<CustomField>
    <fullName>Break_Time__c</fullName>
    <label>Break Time (Hours)</label>
    <precision>16</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>