force-app/main/default/objects/Timesheet_Entry__c/fields/Day_Date__c.field-meta.xml
<CustomField>
    <fullName>Day_Date__c</fullName>
    <label>Day Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>