force-app/main/default/objects/Timesheet_Entry__c/fields/Day_Notes__c.field-meta.xml
<CustomField>
    <fullName>Day_Notes__c</fullName>
    <label>Day Notes</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>