force-app/main/default/objects/Timesheet_Entry__c/fields/End_of_Day__c.field-meta.xml
<CustomField>
    <fullName>End_of_Day__c</fullName>
    <label>End of Day</label>
    <type>Time</type>
</CustomField>