force-app/main/default/objects/Timesheet_Entry__c/fields/Start_of_Day__c.field-meta.xml
<CustomField>
    <fullName>Start_of_Day__c</fullName>
    <label>Start of Day</label>
    <type>Time</type>
</CustomField>